# NVIDIA_mini_pathTracer

./: .gitignore  CMakeLists.txt  README.md  log_nvprosample.txt  log_vk_ray_tracing_before_KHR.txt  main.cpp  out.hdr  vk_layer_settings.txt
edit/: CMakeLists.txt  log_nvprosample.txt  main.cpp
edit/shaders/: raytrace.comp.glsl  raytrace.comp.glsl.spv
ray_tracing_before/: CMakeLists.txt  hello_vulkan.cpp  hello_vulkan.h  main.cpp
ray_tracing_before/shaders/: host_device.h
ray_tracing_before/spv/: frag_shader.frag.spv  passthrough.vert.spv  post.frag.spv  vert_shader.vert.spv
